# probate-bot

./: .gitignore  README.md  pyproject.toml
deploy/oracle/: bootstrap.sh  deploy-remote.sh  nginx-probate-bot.conf  provision-oci-free-tier.sh  run-sync.sh
deploy/oracle/systemd/: probate-bot-backup.service  probate-bot-backup.timer  probate-bot-sync.service  probate-bot-sync.timer  probate-bot-web.service  probate-bot.env
docs/: aws-deployment.md  operator-guide.md  oracle-deployment-runbook.md  oracle-poc.md  source-registry.md
src/probate_bot/: __init__.py  cli.py  config.py  exporters.py  models.py  scoring.py  service.py  storage.py  web.py
src/probate_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/probate_bot/scrapers/: base.py  cobb_benchmark.py  georgia_probate_records.py
src/probate_bot/static/: app.css
src/probate_bot/templates/: base.html  index.html
tests/: test_cobb_benchmark.py  test_scoring.py  test_storage.py  test_web.py
