[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probate-bot"
version = "0.1.0"
description = "County probate lead scraper focused on Georgia probate estate portals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1,<4",
  "gunicorn>=23,<24",
  "playwright>=1.54,<2",
]

[project.scripts]
probate-bot = "probate_bot.cli:main"
probate-bot-web = "probate_bot.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
